spacing fixes for banner text and doc list on mobile

--- a/styles/css/one-column.css
+++ b/styles/css/one-column.css
@@ -691,9 +691,9 @@ a.top-link {
 	}
 
 	a.loc-pin:hover, a.loc-pin:focus, a.loc-pin:active{
-	background-image: url('../../files/images/pin_lg_mobile.png');
-	width: 40px;
-	height: 66px;
+		background-image: url('../../files/images/pin_lg_mobile.png');
+		width: 40px;
+		height: 66px;
 	}
 
 	.doc-list-mobile img{
@@ -708,21 +708,22 @@ a.top-link {
 	}
 
 	.doc-list-mobile .doc-text-box h5, h6 {
-	  padding-bottom: 0;
+	  	padding-bottom: 0;
 	}
 
 	.doc-list-mobile h4 {
-	  padding-top: 5px;
+	  	padding-top: 5px;
 	}
 
 	.doc-list-mobile h5{
-	  margin-bottom: 0;
-	  font-weight: bold;
+		margin-top: 5px;
+	  	margin-bottom: 0;
+	  	font-weight: bold;
 	}
 
 	.doc-list-mobile h6{
-	  margin: 0;
-	  font-weight: bold;
+	  	margin: 0;
+	  	font-weight: bold;
 	}
 
 	.doc-list-mobile ul.doc-desc{
@@ -749,8 +750,8 @@ a.top-link {
 	}
 
 	p.sub-desc {
-  line-height: 1.2em;
-}
+	  line-height: 1.2em;
+	}
 
 	p.navbar-text.phone-number-box.better-font.brand-text {
 	  margin: 15px 0px 0px 0px ;
@@ -765,9 +766,9 @@ a.top-link {
 	}
 
 	.btn-form {
-	font-size: .8em;
-	margin-top: 10px;
-	padding: 5px 10px;
+		font-size: .8em;
+		margin-top: 10px;
+		padding: 5px 10px;
 	}
 
 	.row1-caption {
@@ -817,10 +818,10 @@ a.top-link {
 	}
 
 	p.tap-text {
-	color: #ffffff;
-	font-size: 1.5em;
-	position: relative;
-	top: 40px;
+		color: #ffffff;
+		font-size: 1.5em;
+		position: relative;
+		top: 40px;
 	}
 
 
@@ -841,14 +842,20 @@ a.top-link {
 	  top: 133px;
 	}
 
-form.campaign, .campaign-confirm {
-  margin: 0 auto 50px auto;
-  width: 274px;
-}
+	form.campaign, .campaign-confirm {
+	  margin: 0 auto 50px auto;
+	  width: 274px;
+	}
 
-.row-4 h3 {
-	margin-bottom: -62px;
-}
+	.row-4 h3 {
+		margin-bottom: -62px;
+	}
+
+	#bannerSec .row1-caption{
+	  left: 10px;
+	  position: relative;
+	  font-size: 11px;
+	}
 
 
 }
